// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly Expense Summary with multiple expense 1`] = `
<div>
  <h1>
    Visible 
    expenses
      
    23
     of total 
    $24,545.43
  </h1>
</div>
`;

exports[`Should correctly Expense Summary with one expense 1`] = `
<div>
  <h1>
    Visible 
    expense
      
    1
     of total 
    $1.34
  </h1>
</div>
`;
